@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2011-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2011-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -30,17 +30,18 @@ package org.opennms.netmgt.jasper.rrdtool;
 
 import java.util.Date;
 
-import net.sf.jasperreports.engine.JRDataSource;
 import net.sf.jasperreports.engine.JRException;
 import net.sf.jasperreports.engine.JRField;
+import net.sf.jasperreports.engine.JRRewindableDataSource;
 
-public class RrdtoolDataSource implements JRDataSource {
+public class RrdtoolDataSource implements JRRewindableDataSource {
 
 	private int m_currentRow = -1;
 	private Xport m_data;
 
 	public RrdtoolDataSource(Xport data) {
 		this.m_data = data;
+		moveFirst();
 	}
 
         @Override
@@ -49,11 +50,18 @@ public class RrdtoolDataSource implements JRDataSource {
 			long ts = new Long(m_data.getData().getRow(m_currentRow).getT().getContent()) * 1000L;
 			return new Date(ts);
 		}else if ("Step".equalsIgnoreCase(getColumnName(field))) {
-		    return new Integer(m_data.getMeta().getStep().getContent());
+		    return Long.valueOf(m_data.getMeta().getStep().getContent());
 		}
 		int index = getColumnIndex(field);
-		return new Double(m_data.getData().getRow(m_currentRow).getV(index).getContent());
+		return toDouble(m_data.getData().getRow(m_currentRow).getV(index).getContent());
 	}
+
+    private static Double toDouble(final String value) {
+        if ("inf".equalsIgnoreCase(value)) {
+            return Double.POSITIVE_INFINITY;
+        }
+        return new Double(value);
+    }
 
 	private String getColumnName(JRField field) {
 		return field.getDescription() == null || field.getDescription().trim().equals("")
@@ -77,4 +85,8 @@ public class RrdtoolDataSource implements JRDataSource {
 		return -1;
 	}
 
+    @Override
+    public void moveFirst() {
+        m_currentRow = -1;
+    }
 }
