@@ -1,21 +1,22 @@
 /*******************************************************************************
+ * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2011-2013 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2013 The OpenNMS Group, Inc.
+ * Copyright (C) 2006-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -662,12 +663,12 @@ public class MapPropertiesFactory {
             Link lnk = new Link(Integer.parseInt(id), speed,text,width,dash_arr,snmp_type,multilinkwidth,multilink_dasharray);
 
             LOG.debug("found link {} with id={}, text={}, speed={}, width={}, dash-array={}, snmp-type={}. Adding it.", links[i], id, text, speed, width, dasharray, snmp_type);
-            linksMap.put(new Integer(id), lnk);
-            Set<Link> linkbysnmptypeSet = linksBySnmpTypeMap.get(new Integer(snmp_type));
+            linksMap.put(Integer.valueOf(id), lnk);
+            Set<Link> linkbysnmptypeSet = linksBySnmpTypeMap.get(Integer.valueOf(snmp_type));
             if(linkbysnmptypeSet==null)
                 linkbysnmptypeSet=new HashSet<Link>();
             linkbysnmptypeSet.add(lnk);
-            linksBySnmpTypeMap.put(new Integer(snmp_type), linkbysnmptypeSet);
+            linksBySnmpTypeMap.put(Integer.valueOf(snmp_type), linkbysnmptypeSet);
         }
 
 
@@ -993,7 +994,7 @@ public class MapPropertiesFactory {
      * @return a {@link java.util.Set} object.
      */
     public Set<Link> getLinkBySnmpType(int linkTypologyId){
-        return linksBySnmpTypeMap.get(new Integer(linkTypologyId));
+        return linksBySnmpTypeMap.get(Integer.valueOf(linkTypologyId));
     }
 
     /**
@@ -1044,7 +1045,7 @@ public class MapPropertiesFactory {
      * @return a {@link org.opennms.web.map.config.Link} object.
      */
     public Link getLink(int id){
-        return (Link)linksMap.get(new Integer(id));
+        return (Link)linksMap.get(Integer.valueOf(id));
     }
 
     /**
